--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
+    "scripts": {
+        "dev": "ts-node-dev src/main.ts",
+        "migrate": "echo 'マイグレーション名を入力' && read MIGRATION_NAME && prisma migrate dev --name $MIGRATION_NAME && yarn generate",
+        "generate": "prisma generate"
+    },
     "dependencies": {
         "@kenchi/nexus-plugin-prisma": "^0.37.0",
         "@prisma/client": "^2.30.0",
