--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
         "@prisma/client": "^2.30.0",
         "apollo-server": "^3.3.0",
         "graphql": "^15.5.1",
-        "nexus": "^1.1.0",
-        "nexus-plugin-prisma": "^0.35.0",
-        "nexus-prisma": "^0.31.0"
+        "nexus": "^1.1.0"
     },
     "devDependencies": {
         "@types/node": "^16.7.2",
